# paper_tracker

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  THIRD-PARTY.txt  camera.cpp  image_downloader.cpp  inference.cpp  inference_test.cpp  kalman_fliter.cpp  main.cpp  main_window.cpp  main_window.ui  osc.cpp  roi_event.cpp  serial.cpp  video_reader.cpp
include/: camera.hpp  image_downloader.hpp  inference.hpp  logger.h  logger.hpp  main_window.hpp  osc.hpp  roi_event.hpp  serial.hpp  ui_main_window.h  video_reader.hpp  wifi_cache_file_writer.hpp
inference/: inference.cpp
inference/include/: inference.hpp  kalman_filter.hpp
model/: License.txt
resources/: material.qss
transfer/: image_downloader.cpp  osc.cpp  serial.cpp  video_reader.cpp
transfer/include/: image_downloader.hpp  osc.hpp  serial.hpp  updater.hpp  video_reader.hpp
ui/: main_window.cpp  main_window.ui  roi_event.cpp
ui/include/: main_window.hpp  roi_event.hpp  ui_main_window.h
utilities/: logger.cpp  wifi_cache_file_writer.cpp
utilities/include/: config_writer.hpp  logger.hpp  reflect.hpp  thread_pool.hpp  updater.hpp  wifi_cache_file_writer.hpp
